@@ -3,6 +3,6 @@ module Olag
 
   # This version number. The third number is automatically updated to track the
   # number of Git commits by running <tt>rake version</tt>.
-  VERSION = "0.1.9"
+  VERSION = "0.1.10"
 
 end
