@@ -1,5 +1,6 @@
 2011-07-24	Oren Ben-Kiki <github-oren@ben-kiki.org>
 
+	* Append rather than replace gem spec file members.
 	* Allow in_path error blocks to return a value.
 
 2011-04-22	Oren Ben-Kiki <github-oren@ben-kiki.org>
